--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "covid-resource-aggregator",
+  "name": "avail-plasma",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^8.4.3",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.32.11"
   }
 }
